Fix hero width with "align-self: stretch"

--- a/style.css
+++ b/style.css
@@ -30,7 +30,7 @@ body {
 .dark {
     background-color: var(--hero-background);
     color: var(--hero-primary-text-color);
-    width: 100%;
+    align-self: stretch;
 }
 
 .header {
